--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,7 +19,7 @@ android {
         minSdkVersion 21
         targetSdkVersion 24
         versionCode code
-        versionName "1.0."+code
+        versionName "1.0." + code
     }
     buildTypes {
         release {
@@ -54,9 +54,6 @@ dependencies {
     compile('com.mikepenz:materialdrawer:5.5.0@aar') {
         transitive = true
     }
-    // retrofit
-    compile 'com.squareup.retrofit2:retrofit:2.1.0'
-    compile 'com.squareup.retrofit2:converter-gson:2.1.0'
     // rxjava & rxandroid
     compile 'io.reactivex:rxjava:1.1.9'
     compile 'io.reactivex:rxandroid:1.2.1'
@@ -67,4 +64,6 @@ dependencies {
     compile 'com.mikepenz:google-material-typeface:2.2.0.3.original@aar'
     // fab
     compile 'com.getbase:floatingactionbutton:1.10.1'
+    // photo view
+    compile 'com.github.chrisbanes:PhotoView:1.3.0'
 }
