--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,6 @@ android {
     compileSdkVersion 24
     buildToolsVersion "24.0.1"
     useLibrary 'org.apache.http.legacy'
-
     def Properties versionProps = new Properties()
     def versionPropsFile = file('version.properties')
     if (versionPropsFile.exists())
@@ -13,12 +12,10 @@ android {
     int code = new Integer((String) versionProps['VERSION_CODE'] ?: "0") + 1
     versionProps['VERSION_CODE'] = code.toString()
     versionProps.store(versionPropsFile.newWriter(), null)
-
     defaultConfig {
-        applicationId "com.sorcererxw.matthiasheidericphotography"
+        applicationId 'com.sorcererxw.matthiasheiderichphotography'
         minSdkVersion 21
         targetSdkVersion 24
-        versionCode code
         versionName "1.0." + code
     }
     buildTypes {
@@ -27,10 +24,12 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    productFlavors {
+    }
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:24.2.0'
     compile 'com.android.support:design:24.2.0'
@@ -63,7 +62,7 @@ dependencies {
     compile 'com.mikepenz:iconics-core:2.8.0@aar'
     compile 'com.mikepenz:google-material-typeface:2.2.0.3.original@aar'
     // fab
-    compile 'com.getbase:floatingactionbutton:1.10.1'
+    compile 'com.github.clans:fab:1.6.4'
     // photo view
     compile 'com.github.chrisbanes:PhotoView:1.3.0'
 }
