--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.neenbedankt.android-apt'
 
 android {
     compileSdkVersion 24
-    buildToolsVersion "24.0.1"
+    buildToolsVersion "24.0.2"
     useLibrary 'org.apache.http.legacy'
     def Properties versionProps = new Properties()
     def versionPropsFile = file('version.properties')
@@ -16,11 +16,18 @@ android {
         applicationId 'com.sorcererxw.matthiasheiderichphotography'
         minSdkVersion 21
         targetSdkVersion 24
-        versionName "1.0." + code
+        versionName "1.2." + code
+        versionCode code
     }
     buildTypes {
+        debug{
+            minifyEnabled true
+            shrinkResources true
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
         release {
-            minifyEnabled false
+            minifyEnabled true
+            shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
@@ -53,9 +60,10 @@ dependencies {
     compile('com.mikepenz:materialdrawer:5.5.0@aar') {
         transitive = true
     }
-    // rxjava & rxandroid
+    // rx
     compile 'io.reactivex:rxjava:1.1.9'
     compile 'io.reactivex:rxandroid:1.2.1'
+    compile 'com.artemzin.rxjava:proguard-rules:1.1.9.0'
     // indicator
     compile 'com.wang.avi:library:2.1.3'
     // iconics
