--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,9 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.sorcererxw.matthiasheiderichphotography.ui.activities.MainActivity">
+        <activity
+            android:screenOrientation="portrait"
+            android:name="com.sorcererxw.matthiasheiderichphotography.ui.activities.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
