--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.neenbedankt.android-apt'
 
 android {
     compileSdkVersion 24
-    buildToolsVersion "24.0.2"
+    buildToolsVersion "24.0.3"
     useLibrary 'org.apache.http.legacy'
     def Properties versionProps = new Properties()
     def versionPropsFile = file('version.properties')
@@ -16,7 +16,7 @@ android {
         applicationId 'com.sorcererxw.matthiasheiderichphotography'
         minSdkVersion 21
         targetSdkVersion 24
-        versionName "1.2." + code
+        versionName "1.3." + code
         versionCode code
     }
     buildTypes {
@@ -38,12 +38,12 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:24.2.0'
-    compile 'com.android.support:design:24.2.0'
-    compile 'com.android.support:cardview-v7:24.2.0'
-    compile 'com.android.support:recyclerview-v7:24.2.0'
-    compile 'com.android.support:support-v4:24.2.0'
-    compile 'com.android.support:palette-v7:24.2.0'
+    compile 'com.android.support:appcompat-v7:24.2.1'
+    compile 'com.android.support:design:24.2.1'
+    compile 'com.android.support:cardview-v7:24.2.1'
+    compile 'com.android.support:recyclerview-v7:24.2.1'
+    compile 'com.android.support:support-v4:24.2.1'
+    compile 'com.android.support:palette-v7:24.2.1'
     // material dialog
     compile('com.github.afollestad.material-dialogs:core:0.9.0.0') {
         transitive = true
@@ -64,6 +64,7 @@ dependencies {
     compile 'io.reactivex:rxjava:1.1.9'
     compile 'io.reactivex:rxandroid:1.2.1'
     compile 'com.artemzin.rxjava:proguard-rules:1.1.9.0'
+    compile 'com.tbruyelle.rxpermissions:rxpermissions:0.7.1@aar'
     // indicator
     compile 'com.wang.avi:library:2.1.3'
     // iconics
