--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,10 +1,7 @@
 apply plugin: 'com.android.application'
 apply plugin: 'com.neenbedankt.android-apt'
 
-android {
-    compileSdkVersion 24
-    buildToolsVersion "24.0.3"
-    useLibrary 'org.apache.http.legacy'
+def getVersionCode() {
     def Properties versionProps = new Properties()
     def versionPropsFile = file('version.properties')
     if (versionPropsFile.exists())
@@ -12,15 +9,23 @@ android {
     int code = new Integer((String) versionProps['VERSION_CODE'] ?: "0") + 1
     versionProps['VERSION_CODE'] = code.toString()
     versionProps.store(versionPropsFile.newWriter(), null)
+    return code
+}
+
+android {
+    compileSdkVersion 24
+    buildToolsVersion "24.0.3"
+    useLibrary 'org.apache.http.legacy'
+
     defaultConfig {
         applicationId 'com.sorcererxw.matthiasheiderichphotography'
         minSdkVersion 21
         targetSdkVersion 24
-        versionName "1.3." + code
-        versionCode code
+        versionName "1.4." + getVersionCode()
+        versionCode getVersionCode()
     }
     buildTypes {
-        debug{
+        debug {
             minifyEnabled true
             shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
@@ -33,6 +38,7 @@ android {
     }
     productFlavors {
     }
+    return void;
 }
 
 dependencies {
