--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.neenbedankt.android-apt'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion "25.0.0"
+    buildToolsVersion "25.0.1"
 
     def Properties versionProps = new Properties()
     def versionPropsFile = file('version.properties')
@@ -67,10 +67,9 @@ dependencies {
         transitive = true
     }
     // rx
-    compile 'io.reactivex:rxjava:1.2.2'
-    compile 'io.reactivex:rxandroid:1.2.1'
-    compile 'com.artemzin.rxjava:proguard-rules:1.2.2.0'
-    compile 'com.tbruyelle.rxpermissions:rxpermissions:0.9.0@aar'
+    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    compile 'io.reactivex.rxjava2:rxjava:2.0.1'
+    compile 'com.tbruyelle.rxpermissions2:rxpermissions:0.8.2@aar'
     // indicator
     compile 'com.wang.avi:library:2.1.3'
     // iconics
@@ -86,5 +85,8 @@ dependencies {
     compile 'com.eftimoff:android-pathview:1.0.8@aar'
     // glide
     compile 'com.github.bumptech.glide:glide:3.7.0'
+
+    compile 'org.jsoup:jsoup:1.10.1'
+
     compile project(':typeface-views')
 }
