--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
         android:theme="@style/AppTheme">
         <activity
             android:name="com.sorcererxw.matthiasheiderichphotography.ui.activities.MainActivity"
+            android:exported="true"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -26,16 +27,20 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
 
-            <meta-data android:name="android.app.shortcuts"
-                       android:resource="@xml/shortcuts" />
+            <meta-data
+                android:name="android.app.shortcuts"
+                android:resource="@xml/shortcuts"/>
         </activity>
         <activity
             android:name="com.sorcererxw.matthiasheiderichphotography.ui.activities.DetailActivity"
             android:theme="@style/AppTheme.Detail">
         </activity>
 
-        <activity android:name="com.sorcererxw.matthiasheiderichphotography.ui.activities.ShortcutActivity"
-            android:theme="@style/Theme.Transparent"/>
+        <activity
+            android:name="com.sorcererxw.matthiasheiderichphotography.ui.activities.ShortcutActivity"
+            android:exported="true"
+            android:theme="@style/Theme.Transparent">
+        </activity>
 
         <service android:name="com.sorcererxw.matthiasheiderichphotography.services.WallpaperChangeService"/>
 
@@ -65,6 +70,11 @@
         <meta-data
             android:name="com.sorcererxw.matthiasheiderichphotography.util.GlideConfiguration"
             android:value="GlideModule"/>
+        <!-- ATTENTION: This was auto-generated to add Google Play services to your project for
+     App Indexing.  See https://g.co/AppIndexing/AndroidStudio for more information. -->
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version"/>
     </application>
 
 </manifest>
