--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,8 @@
     <uses-permission android:name="android.permission.VIBRATE"/>
     <uses-permission android:name="android.permission.WAKE_LOCK"/>
     <uses-permission android:name="android.permission.CLEAR_APP_CACHE"/>
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
 
     <application
         android:name="com.sorcererxw.matthiasheiderichphotography.MHApp"
@@ -43,6 +45,13 @@
         </activity>
 
         <service android:name="com.sorcererxw.matthiasheiderichphotography.services.WallpaperChangeService"/>
+
+        <receiver android:name="com.sorcererxw.matthiasheiderichphotography.receivers.BootReceiver">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED"/>
+                <category android:name="android.intent.category.HOME"/>
+            </intent-filter>
+        </receiver>
 
         <service
             android:name="com.sorcererxw.matthiasheiderichphotography.muzei.MHArtSource"
